--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <h1>Polska gora</h1>
+    <h2>How high?</h2>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +42,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <div class="lool">
+    <img class="dzialka" src="assets/plot-junglewoods.png" alt="junglewoods">
+    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
+    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
+    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
+    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
+
+
+
+  </div>
+
+
+
+
+
+
   </body>
 </html>
