Add working React component with one picture

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="src/components/Plot/Plot.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -45,14 +46,12 @@
   <div class="lool">
     <img class="dzialka" src="assets/plot-junglewoods.png" alt="junglewoods">
     <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
-    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
-    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
-    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
 
 
 
   </div>
-
+  <h1> Próba Reacta</h1>
+  <div id="plots"></div>
 
 
 
