Clean up in files

--- a/public/index.html
+++ b/public/index.html
@@ -26,34 +26,17 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="src/components/Plot/Plot.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <h1>Polska gora</h1>
-    <h2>How high?</h2>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  <div class="lool">
-    <img class="dzialka" src="assets/plot-junglewoods.png" alt="junglewoods">
-    <img class="dzialka" src="assets/plot-waski021.png" alt="junglewoods">
 
 
 
-  </div>
-  <h1> Próba Reacta</h1>
+
   <div id="plots"></div>
 
-
+  <!-- Tutaj tylko komponent root i w nim wszystko zapisywac i modyfikowac -->
 
 
 
